--- a/node-express/index.html
+++ b/node-express/index.html
@@ -2,11 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>표만들기</title>
+    <style>
+        td{
+            padding: 30px;
+        }
+        tr>td:nth-child(odd){
+            width: 120px;
+        }
+        tr>td:nth-child(even){
+            width: 300px;
+        }
+    </style>
 </head>
 <body>
-<h1>Hello Node</h1>
-<h2>Hello Express</h2>
 
+
+<table border="1">
+    <thead>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td rowspan="3"></td> <td rowspan="2">성명</td> <td rowspan="2"></td> <td colspan="2">주민등록번호</td>
+        </tr>
+        <tr>
+            <td colspan="2">020510-3****** </td>
+
+        </tr>
+        <tr>
+            <td colspan="4">생년월일 2002년 5월 1일 (만 18세)</td>
+
+        </tr>
+        <tr>
+            <td rowspan="2">연락처</td>
+            <td>집</td>
+            <td>111-1111-1111</td>
+            <td rowspan="2">전자우편</td>
+            <td rowspan="2">a@a.com</td>
+        </tr>
+        <tr>
+            <td>핸드폰</td>
+            <td>222-2222-2222</td>
+        </tr>
+
+    </tbody>
+</table>
 </body>
 </html>
